# arrangement

./: CMakeLists.txt  README.md  arrangement.pro  arrangement.pro.old  make.sh  make_clean.sh  resources.qrc
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  ballmesh.cpp  ballmesh.h  benchmarkdialog.cpp  benchmarkdialog.h  benchmarkdialog.ui  cellconfigurationspace.h  clientform.cpp  clientform.h  clientform.ui  colorwidget.cpp  colorwidget.h  compressor.cpp  compressor.h  configurationobject.cpp  configurationobject.h  configurationobjectdialog.cpp  configurationobjectdialog.h  configurationobjectdialog.ui  configurationspace.h  decimalscene.h  exactconfigurationspace.h  genericrouter.h  gridmesh.cpp  gridmesh.h  ispoweroftwo.h  kernel.h  logobackform.cpp  logobackform.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  mesh.cpp  mesh.h  miniz.c  (+68 more)
